[gd_scene load_steps=18 format=4 uid="uid://cybf3e0y2shum"]

[ext_resource type="Texture2D" uid="uid://bls7vx4kbemho" path="res://art/Sheets/Fence.png" id="2_0bxk8"]
[ext_resource type="Script" path="res://clicking_area.gd" id="2_o11o7"]
[ext_resource type="Texture2D" uid="uid://405k6i7trs7m" path="res://art/banner.jpg" id="3_bjxau"]
[ext_resource type="Texture2D" uid="uid://okkfwx1yddgq" path="res://art/Sheets/FarmTilesGreen.png" id="3_e7w6a"]
[ext_resource type="Script" path="res://addons/animatedbutton/AnimatedButton.gd" id="3_ir7x5"]
[ext_resource type="Script" path="res://GameManager.gd" id="4_40bb0"]
[ext_resource type="Script" path="res://MoneyLabel.gd" id="5_5cjjf"]
[ext_resource type="Script" path="res://ShopPanel.gd" id="6_t58lw"]
[ext_resource type="Texture2D" uid="uid://sjpye38ns6pd" path="res://art/chicken_icon.svg" id="7_7y5ww"]
[ext_resource type="PackedScene" uid="uid://mthwg2aw2mxs" path="res://CPUParticles2D.tscn" id="10_0jnne"]
[ext_resource type="Script" path="res://AnimalSpawner.gd" id="10_5jcso"]
[ext_resource type="Texture2D" uid="uid://uvwtm3a4a3df" path="res://animals/Chicken.tres" id="11_6g56e"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5suka"]
texture = ExtResource("3_e7w6a")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0

[sub_resource type="TileSet" id="TileSet_qvc6r"]
sources/0 = SubResource("TileSetAtlasSource_5suka")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_672do"]
texture = ExtResource("2_0bxk8")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
1:2/0 = 0
6:2/0 = 0
1:3/0 = 0
6:3/0 = 0
1:4/0 = 0
6:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0

[sub_resource type="TileSet" id="TileSet_u4gpo"]
sources/0 = SubResource("TileSetAtlasSource_672do")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5x0qf"]
size = Vector2(644, 1049)

[node name="MainScene" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="Grass" type="ColorRect" parent="Background"]
offset_right = 720.0
offset_bottom = 1280.0
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2
color = Color(0.196078, 0.803922, 0.196078, 1)

[node name="GreenLevel" type="Node2D" parent="Background"]

[node name="GreenTileMap" type="TileMapLayer" parent="Background/GreenLevel"]
position = Vector2(0, 4.76837e-07)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAAAAAIAAAAEAAMAAAABAAIAAAAEAAMAAAACAAIAAAAEAAMAAAADAAIAAAAEAAMAAAAEAAIAAAAEAAMAAAAFAAIAAAAEAAMAAAAFAAMAAAAEAAMAAAAEAAMAAAAEAAMAAAADAAMAAAAEAAMAAAACAAMAAAAEAAMAAAABAAMAAAAEAAMAAAAAAAMAAAAEAAMAAAAAAAUAAAAEAAMAAAABAAUAAAAEAAMAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAADAAQAAAAEAAMAAAAEAAQAAAAEAAMAAAAFAAQAAAAEAAMAAAAFAAUAAAAEAAMAAAAEAAUAAAAEAAMAAAADAAUAAAAEAAMAAAACAAUAAAAEAAMAAAAAAAQAAAAEAAMAAAAAAAYAAAAEAAMAAAABAAYAAAAEAAMAAAACAAYAAAAEAAMAAAADAAYAAAAEAAMAAAAEAAYAAAAEAAMAAAAFAAYAAAAEAAMAAAAFAAcAAAAEAAMAAAAEAAcAAAAEAAMAAAADAAcAAAAEAAMAAAACAAcAAAAEAAMAAAABAAcAAAAEAAMAAAAAAAgAAAAEAAMAAAABAAgAAAAEAAMAAAAAAAcAAAAEAAMAAAAAAAkAAAAEAAMAAAACAAgAAAAEAAMAAAADAAgAAAAEAAMAAAADAAkAAAAEAAMAAAACAAkAAAAEAAMAAAACAAoAAAAEAAMAAAABAAoAAAAEAAMAAAABAAkAAAAEAAMAAAAEAAgAAAAEAAMAAAAEAAkAAAAEAAMAAAAFAAgAAAAEAAMAAAAFAAkAAAAEAAMAAAAFAAoAAAAEAAMAAAAEAAoAAAAEAAMAAAAEAAsAAAAEAAMAAAAFAAsAAAAEAAMAAAADAAsAAAAEAAMAAAADAAoAAAAEAAMAAAACAAsAAAAEAAMAAAABAAsAAAAEAAMAAAAAAAsAAAAEAAMAAAAAAAoAAAAEAAMAAAAAAAEAAAACAAIAAAABAAEAAAACAAIAAAACAAEAAAACAAIAAAADAAEAAAACAAIAAAAEAAEAAAACAAIAAAAFAAEAAAACAAIAAAAAAAwAAAADAAIAAAABAAwAAAADAAIAAAACAAwAAAADAAIAAAADAAwAAAADAAIAAAAEAAwAAAADAAIAAAAFAAwAAAADAAIAAAAGAAwAAAADAAIAAAAGAAsAAAADAAIAAAAGAAoAAAADAAIAAAAGAAkAAAADAAIAAAAGAAgAAAADAAIAAAAGAAcAAAADAAIAAAAGAAYAAAADAAIAAAAGAAUAAAADAAIAAAAGAAQAAAADAAIAAAAGAAMAAAADAAIAAAAGAAIAAAADAAIAAAAGAAEAAAADAAIAAAAGAAAAAAADAAIAAAAFAAAAAAADAAIAAAAEAAAAAAADAAIAAAADAAAAAAADAAIAAAACAAAAAAADAAIAAAABAAAAAAADAAIAAAAAAAAAAAADAAIAAAAHAAAAAAADAAIAAAAIAAAAAAADAAIAAAAIAAEAAAADAAIAAAAHAAEAAAADAAIAAAAIAAIAAAADAAIAAAAHAAIAAAADAAIAAAAHAAMAAAADAAIAAAAIAAMAAAADAAIAAAAHAAQAAAADAAIAAAAIAAQAAAADAAIAAAAIAAUAAAADAAIAAAAHAAYAAAADAAIAAAAIAAYAAAADAAIAAAAIAAcAAAADAAIAAAAHAAcAAAADAAIAAAAHAAUAAAADAAIAAAAHAAgAAAADAAIAAAAIAAgAAAADAAIAAAAIAAkAAAADAAIAAAAIAAoAAAADAAIAAAAHAAoAAAADAAIAAAAHAAsAAAADAAIAAAAIAAsAAAADAAIAAAAIAAwAAAADAAIAAAAHAAkAAAADAAIAAAAHAAwAAAADAAIAAAAHAA0AAAADAAIAAAAIAA0AAAADAAIAAAAIAA4AAAADAAIAAAAHAA8AAAADAAIAAAAHAA4AAAADAAIAAAAGAA8AAAADAAIAAAAGAA4AAAADAAIAAAAFAA4AAAADAAIAAAAFAA0AAAADAAIAAAAGAA0AAAADAAIAAAAFAA8AAAADAAIAAAAEAA8AAAADAAIAAAAEAA4AAAADAAIAAAADAA4AAAADAAIAAAACAA4AAAADAAIAAAACAA0AAAADAAIAAAADAA0AAAADAAIAAAAEAA0AAAADAAIAAAABAA4AAAADAAIAAAABAA0AAAADAAIAAAADAA8AAAADAAIAAAACAA8AAAADAAIAAAAAAA4AAAADAAIAAAAAAA0AAAADAAIAAAAAAA8AAAADAAIAAAABAA8AAAADAAIAAAAIAA8AAAAEAAQAAAA=")
tile_set = SubResource("TileSet_qvc6r")

[node name="FencesTileMap" type="TileMapLayer" parent="Background/GreenLevel"]
texture_filter = 1
position = Vector2(1.90735e-06, 9.53674e-07)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAAAAAIAAAABAAEAAAABAAIAAAACAAEAAAACAAIAAAACAAEAAAADAAIAAAACAAEAAAAEAAIAAAACAAEAAAAHAAIAAAACAAEAAAAIAAIAAAAGAAEAAAAIAAMAAAAGAAUAAAAGAAIAAAAFAAEAAAAFAAIAAAAEAAEAAAAAAAMAAAABAAIAAAAAAAQAAAABAAIAAAAAAAUAAAABAAIAAAAAAAYAAAABAAIAAAAAAAcAAAABAAIAAAAAAAgAAAABAAIAAAAAAAkAAAABAAIAAAAAAAoAAAABAAIAAAAAAAsAAAABAAIAAAAAAAwAAAABAAIAAAAAAA0AAAABAAIAAAAAAA4AAAABAAIAAAAAAA8AAAABAAYAAAABAA8AAAACAAYAAAABAA4AAAACAAUAAAACAA4AAAADAAUAAAACAA8AAAADAAYAAAADAA4AAAAEAAUAAAADAA8AAAAEAAgAAAAEAA8AAAAEAAgAAAAFAA8AAAAEAAgAAAAGAA8AAAAEAAgAAAAHAA8AAAAEAAgAAAAIAA8AAAAGAAYAAAAIAA4AAAAGAAUAAAAIAA0AAAAGAAUAAAAIAAwAAAAGAAUAAAAIAAsAAAAGAAUAAAAIAAoAAAAGAAUAAAAIAAkAAAAGAAUAAAAIAAgAAAAGAAUAAAAIAAcAAAAGAAUAAAAIAAYAAAAGAAUAAAAIAAUAAAAGAAUAAAAIAAQAAAAGAAUAAAAHAA4AAAAEAAUAAAAGAA4AAAAEAAUAAAAFAA4AAAAEAAUAAAAEAA4AAAAEAAUAAAA=")
tile_set = SubResource("TileSet_u4gpo")

[node name="UI" type="Node2D" parent="."]

[node name="Banner" type="Node2D" parent="UI"]

[node name="BannerBackground" type="TextureRect" parent="UI/Banner"]
offset_right = 1440.0
offset_bottom = 320.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_bjxau")

[node name="ColorBack" type="ColorRect" parent="UI/Banner"]
visible = false
offset_right = 720.0
offset_bottom = 130.0
color = Color(0, 0, 0, 1)

[node name="StoreButton" type="Node2D" parent="UI/Banner"]

[node name="ShopButton" type="Button" parent="UI/Banner/StoreButton"]
offset_left = 25.0
offset_top = 47.0
offset_right = 180.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
toggle_mode = true
text = "Store
"
script = ExtResource("3_ir7x5")

[node name="TrainButton" type="Node2D" parent="UI/Banner"]

[node name="MoneyLabel" type="Label" parent="UI/Banner/TrainButton"]
offset_left = 230.0
offset_top = 47.0
offset_right = 480.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 40
text = "0 "
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_5cjjf")

[node name="CoinCount" type="Node2D" parent="UI/Banner"]

[node name="AnimatedButton" type="Button" parent="UI/Banner/CoinCount"]
offset_left = 534.0
offset_top = 47.0
offset_right = 689.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
text = "Train"
script = ExtResource("3_ir7x5")

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="ShopPanel" type="PanelContainer" parent="UI/CanvasLayer"]
offset_left = 47.0
offset_top = 210.0
offset_right = 678.0
offset_bottom = 1235.0
script = ExtResource("6_t58lw")

[node name="ScrollContainer" type="ScrollContainer" parent="UI/CanvasLayer/ShopPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/ShopPanel/ScrollContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/CanvasLayer/ShopPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Shop"

[node name="AnimalList" type="VBoxContainer" parent="UI/CanvasLayer/ShopPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Example_ChickenEntry" type="HBoxContainer" parent="UI/CanvasLayer/ShopPanel/ScrollContainer/VBoxContainer/AnimalList"]
visible = false
layout_mode = 2

[node name="Icon" type="TextureRect" parent="UI/CanvasLayer/ShopPanel/ScrollContainer/VBoxContainer/AnimalList/Example_ChickenEntry"]
layout_mode = 2
texture = ExtResource("7_7y5ww")
expand_mode = 2

[node name="NameLabel" type="Label" parent="UI/CanvasLayer/ShopPanel/ScrollContainer/VBoxContainer/AnimalList/Example_ChickenEntry"]
layout_mode = 2
text = "Chicken"

[node name="CostLabel" type="Label" parent="UI/CanvasLayer/ShopPanel/ScrollContainer/VBoxContainer/AnimalList/Example_ChickenEntry"]
layout_mode = 2
text = "$50"

[node name="AnimatedButton" type="Button" parent="UI/CanvasLayer/ShopPanel/ScrollContainer/VBoxContainer/AnimalList/Example_ChickenEntry"]
layout_mode = 2
script = ExtResource("3_ir7x5")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("4_40bb0")

[node name="Timer" type="Timer" parent="GameManager"]
autostart = true

[node name="ClickingArea" type="Area2D" parent="."]
script = ExtResource("2_o11o7")

[node name="ClickableArea" type="CollisionShape2D" parent="ClickingArea"]
position = Vector2(361, 731.5)
shape = SubResource("RectangleShape2D_5x0qf")

[node name="CPUParticles2D" parent="ClickingArea" instance=ExtResource("10_0jnne")]

[node name="AnimalSpawner" type="Node2D" parent="."]
script = ExtResource("10_5jcso")

[node name="Example_Spawned Animal" type="Sprite2D" parent="AnimalSpawner"]
visible = false
position = Vector2(296, 421)
texture = ExtResource("11_6g56e")

[connection signal="toggled" from="UI/Banner/StoreButton/ShopButton" to="UI/CanvasLayer/ShopPanel" method="_on_shop_button_toggled"]
[connection signal="money_updated" from="UI/CanvasLayer/ShopPanel" to="GameManager" method="_on_shop_panel_money_updated"]
[connection signal="money_updated" from="UI/CanvasLayer/ShopPanel" to="AnimalSpawner" method="_on_shop_panel_money_updated"]
[connection signal="money_updated" from="GameManager" to="UI/Banner/TrainButton/MoneyLabel" method="_on_game_manager_money_updated"]
[connection signal="money_updated" from="GameManager" to="UI/CanvasLayer/ShopPanel" method="_on_game_manager_money_updated"]
[connection signal="timeout" from="GameManager/Timer" to="GameManager" method="_on_timer_timeout"]
[connection signal="input_event" from="ClickingArea" to="ClickingArea" method="_on_input_event"]
[connection signal="money_earned" from="ClickingArea" to="GameManager" method="_on_clicking_area_money_earned"]
